--- a/views/index.ejs
+++ b/views/index.ejs
@@ -2,178 +2,232 @@
 <html>
 <head>
     <title><%= title %></title>
-    <link rel='stylesheet' href='/css/style.min.css'/>
-    <link rel="stylesheet" href="/assets/css/amazeui.min.css"/>
+    <!--<link rel="stylesheet" href="/assets/css/amazeui.min.css"/>-->
     <link rel="stylesheet" href="/assets/css/amazeui.flat.min.css"/>
+    <link rel='stylesheet' href='/css/style.css'/>
 </head>
 <body>
-<div class="container">
-    <div class="body-bg"></div>
-    <div class="left-box">
-        <img class="am-img-thumbnail am-circle myPic" src="/images/example1.jpg"/>
-    </div>
-    <div class="mid-box">
-        <ul class="am-list">
-            <li class="active">
-                <img class="list-img am-circle" src="/images/example1.jpg" alt="" style="vertical-align: middle">
-                <span href="#">23523443563546356546</span>
-            </li>
-            <li>
-                <img class="list-img am-circle" src="/images/example1.jpg" alt="" style="vertical-align: middle">
-                <span href="#">23523443563546356546</span>
-            </li>
-            <li>
-                <img class="list-img am-circle" src="/images/example1.jpg" alt="" style="vertical-align: middle">
-                <span href="#">23523443563546356546</span>
-            </li>
-            <li>
-                <img class="list-img am-circle" src="/images/example1.jpg" alt="" style="vertical-align: middle">
-                <span href="#">23523443563546356546</span>
-            </li>
-            <li>
-                <img class="list-img am-circle" src="/images/example1.jpg" alt="" style="vertical-align: middle">
-                <span href="#">23523443563546356546</span>
-            </li>
-            <li>
-                <img class="list-img am-circle" src="/images/example1.jpg" alt="" style="vertical-align: middle">
-                <span href="#">23523443563546356546</span>
-            </li>
-            <li>
-                <img class="list-img am-circle" src="/images/example1.jpg" alt="" style="vertical-align: middle">
-                <span href="#">23523443563546356546</span>
-            </li>
-            <li>
-                <img class="list-img am-circle" src="/images/example1.jpg" alt="" style="vertical-align: middle">
-                <span href="#">23523443563546356546</span>
-            </li>
-            <li>
-                <img class="list-img am-circle" src="/images/example1.jpg" alt="" style="vertical-align: middle">
-                <span href="#">23523443563546356546</span>
-            </li>
-            <li>
-                <img class="list-img am-circle" src="/images/example1.jpg" alt="" style="vertical-align: middle">
-                <span href="#">23523443563546356546</span>
-            </li>
-            <li>
-                <img class="list-img am-circle" src="/images/example1.jpg" alt="" style="vertical-align: middle">
-                <span href="#">23523443563546356546</span>
-            </li>
-            <li>
-                <img class="list-img am-circle" src="/images/example1.jpg" alt="" style="vertical-align: middle">
-                <span href="#">23523443563546356546</span>
-            </li>
+    <div class="am-container">
+        <div class="am-g">
+            <div class="am-panel-default am-u-sm-4 am-u-xs-4">
+                <section class=" am-panel am-panel-primary">
+                    <header class="am-panel-hd">
+                        <h3 class="am-panel-title">好友列表</h3>
+                    </header>
+                    <div class="am-panel-bd">
+                        <ul class="friendList">
+                            <!--<li class="active am-animation-slide-bottom">-->
+                                <!--<img src="/images/shuijiao.jpg" alt="" class="am-circle">-->
+                                <!--<span>名称</span>-->
+                            <!--</li>-->
+                            <!--<li class="am-animation-slide-bottom">-->
+                                <!--<img src="/images/shuijiao.jpg" alt="" class="am-circle">-->
+                                <!--<span>32141234567890gdhjfdsdksj</span>-->
+                            <!--</li>-->
+                            <!--<li class="am-animation-slide-bottom">-->
+                                <!--<img src="/images/shuijiao.jpg" alt="" class="am-circle">-->
+                                <!--<span>名称</span>-->
+                            <!--</li>-->
+                            <!--<li class="am-animation-slide-bottom">-->
+                                <!--<img src="/images/shuijiao.jpg" alt="" class="am-circle">-->
+                                <!--<span>名称</span>-->
+                            <!--</li>-->
+                            <!--<li class="am-animation-slide-bottom">-->
+                                <!--<img src="/images/shuijiao.jpg" alt="" class="am-circle">-->
+                                <!--<span>名称</span>-->
+                            <!--</li>-->
+                            <!--<li class="am-animation-slide-bottom">-->
+                                <!--<img src="/images/shuijiao.jpg" alt="" class="am-circle">-->
+                                <!--<span>名称</span>-->
+                            <!--</li>-->
+                            <!--<li class="am-animation-slide-bottom">-->
+                                <!--<img src="/images/shuijiao.jpg" alt="" class="am-circle">-->
+                                <!--<span>名称</span>-->
+                            <!--</li>-->
+                            <!--<li class="am-animation-slide-bottom">-->
+                                <!--<img src="/images/shuijiao.jpg" alt="" class="am-circle">-->
+                                <!--<span>名称</span>-->
+                            <!--</li>-->
+                            <!--<li class="am-animation-slide-bottom">-->
+                                <!--<img src="/images/shuijiao.jpg" alt="" class="am-circle">-->
+                                <!--<span>名称</span>-->
+                            <!--</li>-->
 
-        </ul>
-
-    </div>
-    <div class="right-box">
-        <header class="right-top">
-            234567
-        </header>
-        <div class="right-middle">
-            <ul class="am-list">
-                <li><a href="#">列表内容</a></li>
-                <li><a href="#">列表内容</a></li>
-                <li><a href="#">列表内容</a></li>
-                <li><a href="#">列表内容</a></li>
-                <li><a href="#">列表内容</a></li>
-                <li><a href="#">列表内容</a></li>
-                <li><a href="#">列表内容</a></li>
-                <li><a href="#">列表内容</a></li>
-                <li><a href="#">列表内容</a></li>
-                <li><a href="#">列表内容</a></li>
-                <li><a href="#">列表内容</a></li>
-                <li><a href="#">列表内容</a></li>
-                <li><a href="#">列表内容</a></li>
-                <li><a href="#">列表内容</a></li>
-                <li><a href="#">列表内容</a></li>
-                <li><a href="#">列表内容</a></li>
-                <li><a href="#">列表内容</a></li>
-                <li><a href="#">列表内容</a></li>
-                <li><a href="#">列表内容</a></li>
-            </ul>
-        </div>
-        <footer class="right-bottom">
-            <nav class="am-btn-toolbar">
-                <ul class="tool-list">
-                    <li>表情</li>
-                    <li>图片</li>
-                    <li>文件</li>
-                </ul>
-            </nav>
-            <div class="textInput">
-                <textarea name="" id="">
-
-                </textarea>
+                        </ul>
+                    </div>
+                    <!--<footer class="am-panel-footer">面板页脚</footer>-->
+                </section>
             </div>
-        </footer>
+            <div class="am-panel-default  am-u-sm-8 am-u-xs-8">
+                <section class=" am-panel am-panel-primary">
+                    <header class="am-panel-hd">
+                        <h3 class="am-panel-title" id="myNicName">昵称</h3>
+                    </header>
+                    <div class="am-panel-bd" id="messageList">
+                        <!--<div class="message left am-animation-slide-bottom">-->
+                            <!--<div class="body">-->
+                                <!--ghjkl;'ghjkl;'ghjkl;'ghjkl;'ghjkl;'ghjkl;'ghjkl;'ghjkl;'ghjkl;'ghjkl;'ghjkl;'ghjkl;'ghjkl;'ghjkl;'ghjkl;'ghjkl;'ghjkl;'ghjkl;'ghjkl;'ghjkl;'-->
+                            <!--</div>-->
+                        <!--</div>-->
+                        <!--<div class="message right am-animation-slide-bottom">-->
+                            <!--<div class="body">-->
+                                <!--ghjkl;'ghjkl;'ghjkl;'ghjkl;'ghjkl;'ghjkl;'ghjkl;'ghjkl;'ghjkl;'ghjkl;'ghjkl;'ghjkl;'ghjkl;'ghjkl;'ghjkl;'ghjkl;'ghjkl;'ghjkl;'ghjkl;'ghjkl;'-->
+                            <!--</div>-->
+                        <!--</div>-->
+                    </div>
+                    <footer class="am-panel-footer">
+                        <div class="am-btn-toolbar">
+                            <div class="am-btn-group">
+                                <a class="am-btn am-btn-primary" href="#">
+                                    <i class="am-icon-smile-o"></i>
+                                </a>
+                            </div>
+                            <div class="am-btn-group">
+                                <a class="am-btn am-btn-primary" href="#">
+                                    <i class="am-icon-image"></i>
+                                </a>
+                            </div>
+                            <div class="am-btn-group">
+                                <a class="am-btn am-btn-primary" href="#">
+                                    <i class="am-icon-file"></i>
+                                </a>
+                            </div>
+                        </div>
+                    </footer>
+                </section>
+                <div class="am-input-group">
+                    <input type="text" class="am-form-field" placeholder="请输入聊天内容">
+                        <span class="am-input-group-label">
+                            <a class="am-btn am-btn-primary" href="#" id="sendBtn">
+                                <i class="am-icon-send"></i>
+                                发送
+                            </a>
+                        </span>
+                </div>
+            </div>
+        </div>
     </div>
-</div>
+
+    <div class="am-modal am-modal-no-btn" tabindex="-1" id="login-model">
+        <div class="am-modal-dialog">
+            <div class="am-modal-hd">用户登录
+                <!--<a href="javascript: void(0)" class="am-close am-close-spin" data-am-modal-close>&times;</a>-->
+            </div>
+            <div class="am-modal-bd">
+                <form class="am-form am-form-horizontal">
+                    <div class="am-form-group">
+                        <label for="doc-ipt-3" class="am-u-sm-2 am-form-label">用户名</label>
+                        <div class="am-u-sm-10">
+                            <input type="text" placeholder="请输入用户名">
+                        </div>
+                    </div>
+
+                    <div class="am-form-group">
+                        <label for="doc-ipt-pwd-2" class="am-u-sm-2 am-form-label">密码</label>
+                        <div class="am-u-sm-10">
+                            <input type="password" placeholder="请输入密码">
+                        </div>
+                    </div>
+
+                    <div class="am-form-group">
+                        <div class="am-u-sm-2 am-u-sm-offset-9">
+                            <button type="submit" class="am-btn am-btn-primary" onclick="login()">登录</button>
+                        </div>
+                    </div>
+                </form>
+            </div>
+        </div>
+    </div>
+
 </body>
 <script src="/js/socket.io.min.js"></script>
 <script src="/js/jquery.min.js"></script>
+<script src="/assets/js/amazeui.min.js"></script>
 <script type="text/javascript">
-    //      var socket=io.connect("http://localhost:3001");//与服务器进行连接
-    //      function socketInit(){
-    //          socket.emit('foo', 'hello World');//发送一个名为foo的事件，并且传递一个字符串数据‘hello’
-    //      }
+    jQuery(document).ready(function () {
+        (function ($) {
 
-    (function ($) {
-        var socket = io();
-        var uName = "";
-        $("#setName").click(function () {
-            var username = $("input[name='username']").val().trim();
-            if (username != "") {
-                uName = username;
-                console.log(uName);
+            var socketHandle = new SocketHandle();
+            socketHandle.init();
 
-                socket.emit("login", uName);
+        })(jQuery);
 
-                socket.on(uName, function (data) {
-                    console.log(uName, data);
-                    $(".right-box").append("<p>" + data.from + ":" + data.message + "</p>")
-                });
+    });
 
+    var SocketHandle = function(){
+        this.socket = null;
+        this.msgHandel = null;
+    }
 
-                socket.on("test", function (data) {
-                    $(".right-box").append("<p>test:" + data.message + "</p>")
-                    console.log("test", data);
-                });
+    var MessageHandel = function(){}
 
-//                })
-            } else {
-                alert("请输入用户名后再试");
+    SocketHandle.prototype = {
+        init : function(){
+            var that = this;
+            //建立到服务器的socket连接
+            this.socket = io.connect();
+            //监听socket的connect事件，此事件表示连接已经建立
+            this.msgHandel = new MessageHandel();
+            this.msgHandel.init(that);
+
+            this.socket.on('connect', function(data) {
+                //连接到服务器后，显示昵称输入框
+                console.log("socket 连接成功")
+                console.log(data);
+            })
+
+            this.socket.on('aaa', function(data) {
+                //连接到服务器后，显示昵称输入框
+                console.log("socket 连接测试")
+                console.log(data);
+                if(data!=""){
+                    that.msgHandel.addToMsgBox(data,true);
+                }
+            })
+
+            this.socket.on('joinIn', function(data) {
+                //连接到服务器后，显示昵称输入框
+                that.msgHandel.addFriend(data);
+            })
+        },
+        sendMsg : function(data){
+            this.socket.emit("msg",data);
+        }
+    }
+
+    MessageHandel.prototype = {
+        init : function(socket){
+            var that = this;
+            $("#sendBtn").on('click',function(){
+                var content = $(this).parent().prev().val();
+                $(this).parent().prev().val("");
+                if(content != ""){
+                    that.addToMsgBox(content,false);
+                    socket.sendMsg(content);
+                }
+            })
+        },
+        addFriend : function(name){
+            var html ="";
+            name.forEach(function(item){
+                html += '<li class="am-animation-slide-bottom"> <img src="/images/shuijiao.jpg" alt="" class="am-circle"> <span>'+item.id+'</span></li>';
+            })
+            $(".friendList").html(html);
+        }
+        ,
+        addToMsgBox : function(content,isSend){
+            var html = "";
+            if(isSend){
+                html += '<div class="message left am-animation-slide-bottom"> <div class="body">'+content+'</div></div>'
+            }else{
+                html += '<div class="message right am-animation-slide-bottom"> <div class="body">'+content+'</div></div>'
             }
-        });
+            $("#messageList").append(html)
+        }
+    }
 
-        $("#sendMsg").click(function () {
-            var toName = $("input[name='to']").val().trim();
-            var message = $("input[name='message']").val().trim();
-            console.log(uName, toName, message);
-            if (toName == "") {
-                alert("对方名称不能为空!");
-            } else if (message == "") {
-                alert("消息不能为空!")
-            } else if (uName == "") {
-                alert("我的名称不能为空!");
-            } else {
-                socket.emit("message", {message: message, target: toName, from: uName});
-            }
-        })
-
-//        function
-    }(jQuery));
-
-
-    //      socket.on(socket.id,function(data){
-    //          console.log(data);
-    //      })
-
-    //      var arr = [];
-    //        for(var key in loginBean){
-    //          arr.push(key);
-    //          console.log(key+":"+typeof key);
-    //      }
-
+    var login = function () {
+        $('#login-model').modal();
+    }
 </script>
 </html>
