--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,136 +1,82 @@
-html {
-  font-size: 62.5%; }
+.am-container {
+  margin: 30px auto; }
 
-body {
-  font-size: 1.4rem;
+.am-input-group-label {
   padding: 0;
-  margin: 0;
-  font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
-  min-width: 1200px; }
-
-.body-bg {
-  background-size: cover;
-  position: absolute;
-  z-index: -1;
-  width: 100%;
-  height: 100%;
-  -webkit-filter: blur(2px);
-  /* Chrome, Opera */
-  -moz-filter: blur(2px);
-  -ms-filter: blur(2px);
-  filter: blur(2px); }
-
-a {
-  color: #00B7FF; }
-
-.container {
-  min-width: 1200px;
-  height: 100vh; }
-
-.float-left, .left-box, .mid-box, .right-box {
-  float: left; }
-
-.left-box {
-  width: 10%;
-  height: 100%;
-  -webkit-box-sizing: border-box;
-  -moz-box-sizing: border-box;
-  box-sizing: border-box;
-  color: #fff;
-  background-color: rgba(28, 175, 226, 0.8);
-  display: block;
-  padding: 0 1rem;
-  position: relative; }
-
-.left-box .icon {
-  border: 1px solid #fff;
-  background-color: rgba(28, 175, 226, 0.8); }
-
-.left-box .icon.active {
-  background-color: #fff; }
-
-.myPic {
-  width: 100%;
-  margin-top: 8rem; }
-
-.mid-box {
-  width: 24%;
-  height: 100%;
-  -webkit-box-sizing: border-box;
-  -moz-box-sizing: border-box;
-  box-sizing: border-box;
-  overflow-x: hidden;
-  overflow-y: scroll;
-  display: block;
-  background-color: rgba(255, 255, 255, 0.8);
-  border-right: 1px solid #ccc; }
-
-.mid-box .am-list > li {
-  padding: 1rem;
-  height: 10rem;
-  line-height: 8rem; }
-
-.mid-box .am-list > li.active {
-  background-color: #eee; }
-
-.list-img {
-  width: 6rem; }
-
-.right-box {
-  -webkit-box-sizing: border-box;
-  -moz-box-sizing: border-box;
-  box-sizing: border-box;
-  width: 66%;
-  height: 100%;
-  background-color: rgba(255, 255, 255, 0.7);
-  display: block; }
-
-.right-top {
-  width: 100%;
-  height: 5rem;
-  border-bottom: 1px solid #eee;
-  -webkit-box-sizing: border-box;
-  -moz-box-sizing: border-box;
-  box-sizing: border-box;
-  line-height: 5rem; }
-
-.right-middle {
-  width: 100%;
-  height: 60%;
-  border-bottom: 1px solid #eee;
-  -webkit-box-sizing: border-box;
-  -moz-box-sizing: border-box;
-  box-sizing: border-box;
-  overflow-x: hidden;
-  overflow-y: scroll; }
-
-.right-middle .am-list > li {
   border: none; }
 
-.right-bottom {
-  width: 100%;
-  height: 28%; }
+.am-panel-bd {
+  height: 500px;
+  overflow-x: hidden;
+  overflow-y: scroll;
+  padding: 0; }
 
-.tool-list {
-  list-style: none; }
+.friendList.active {
+  background-color: #efefef; }
 
-.tool-list li {
-  float: left;
+.friendList {
+  list-style: none;
+  padding-left: 0; }
+  .friendList li.active {
+    background-color: #efefef; }
+  .friendList li {
+    border-bottom: 1px solid #eee;
+    width: 100%;
+    height: 60px;
+    line-height: 60px;
+    padding: 0 15px;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap; }
+    .friendList li img {
+      vertical-align: middle;
+      width: 40px;
+      height: 40px; }
+
+.message-box {
   padding: 10px; }
 
-.textInput {
-  width: 100%;
-  height: 100%;
-  -webkit-box-sizing: border-box;
-  -moz-box-sizing: border-box;
-  box-sizing: border-box;
-  padding: 1rem; }
+.message {
+  padding: 10px;
+  position: relative; }
+  .message img {
+    height: 40px;
+    width: 40px;
+    vertical-align: middle; }
+  .message .body {
+    width: 100%;
+    left: 40px;
+    right: 0;
+    padding: 5px 10px;
+    word-break: break-word;
+    background-color: #cae9f2; }
 
-.textInput textarea {
-  width: 100%;
-  height: 100%;
-  -webkit-box-sizing: border-box;
-  -moz-box-sizing: border-box;
-  box-sizing: border-box;
-  border: 1px solid #efefef;
-  resize: none; }
+.message.left .body {
+  text-align: left; }
+
+.message.left .body:before {
+  content: "";
+  height: 0;
+  width: 0;
+  position: absolute;
+  top: 0;
+  margin-top: 20px;
+  left: 0;
+  border-right: 10px solid #cae9f2;
+  border-top: 10px dashed transparent;
+  border-bottom: 10px dashed transparent; }
+
+.message.right .body {
+  text-align: right; }
+
+.message.right .body:after {
+  content: "";
+  height: 0;
+  width: 0;
+  position: absolute;
+  top: 0;
+  margin-top: 20px;
+  right: 0;
+  border-left: 10px solid #cae9f2;
+  border-top: 10px dashed transparent;
+  border-bottom: 10px dashed transparent; }
