--- a/public_dev/css/style.scss
+++ b/public_dev/css/style.scss
@@ -3,7 +3,7 @@
   height: 0;
   width: 0;
   position: absolute;
-  top:0;
+  top: 0;
   margin-top: $marginTop;
 
   @if $direction == top {
@@ -12,7 +12,7 @@
     border-right:$size dashed transparent;
   }
   @else if $direction == right {
-    right:0;
+    right: -10px;
     border-left:$size solid $borderColor;
     border-top:$size dashed transparent;
     border-bottom:$size dashed transparent;
@@ -24,11 +24,20 @@
     border-right:$size dashed transparent;
   }
   @else if $direction == left {
-    left:0;
+    left:-10px;
     border-right:$size solid $borderColor;
     border-top:$size dashed transparent;
     border-bottom:$size dashed transparent;
   }
+}
+
+
+@mixin transition($prop,$time){
+  -webkit-transition: $prop $time;
+  -moz-transition: $prop $time;
+  -ms-transition: $prop $time;
+  -o-transition: $prop $time;
+  transition: $prop $time;
 }
 
 .am-container {
@@ -43,7 +52,7 @@
 .am-panel-bd {
   height: 500px;
   overflow-x: hidden;
-  overflow-y: scroll;
+  //overflow-y: scroll;
   padding: 0;
 }
 
@@ -59,7 +68,12 @@
     background-color: #efefef;
   }
 
+  li:hover,li:active{
+    background-color: #eee;
+  }
+
   li {
+    @include transition(background-color,1s);
     border-bottom: 1px solid #eee;
     width: 100%;
     height: 60px;
@@ -81,6 +95,7 @@
 }
 
 .message{
+  clear: both;
   padding:10px;
   position: relative;
   img{
@@ -90,30 +105,57 @@
   }
 
   .body{
-    width: 100%;
-    left:40px;
+    width: auto;
+    //left:40px;
     right: 0;
     padding:5px 10px;
     word-break: break-word;
     background-color: rgb(202,233,242);
+    display: inline-block;
+    position: relative;
+    max-width: 510px;
   }
 }
 
 .message.left{
   .body{
-    text-align: left;
+    border-radius: 5px;
+    float: left;
+    margin-left: 20px;
+  }
+  img{
+    float: left;
   }
   .body:before{
-    @include triangle(left,10px,rgb(202,233,242),20px);
+    @include triangle(left,10px,rgb(202,233,242),10px);
   }
 }
 
 .message.right{
+
   .body{
-    text-align: right;
+    border-radius: 5px;
+    float: right;
+    margin-right: 20px;
+  }
+  img{
+    float: right;
   }
   .body:after{
-    @include triangle(right,10px,rgb(202,233,242),20px);
+    @include triangle(right,10px,rgb(202,233,242),10px);
   }
 }
 
+
+.am-panel-bd.myUserInfo{
+  height: 90px;
+  padding:10px;
+  img{
+    vertical-align: middle;
+    width: 40px;
+    height: 40px;
+  }
+  span{
+    color: #red;
+  }
+}
