一对一聊天实现   图片发送

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -109,3 +109,10 @@
     height: 40px; }
   .am-panel-bd.myUserInfo span {
     color: #red; }
+
+.input-cover {
+  position: absolute;
+  width: 48px;
+  height: 37px;
+  opacity: 0;
+  z-index: 2; }
