--- a/views/index.ejs
+++ b/views/index.ejs
@@ -45,16 +45,19 @@
                     <footer class="am-panel-footer">
                         <div class="am-btn-toolbar">
                             <div class="am-btn-group">
+                                <input type="file" class="input-cover emoji">
                                 <a class="am-btn am-btn-primary" href="#">
                                     <i class="am-icon-smile-o"></i>
                                 </a>
                             </div>
                             <div class="am-btn-group">
+                                <input type="file" class="input-cover image">
                                 <a class="am-btn am-btn-primary" href="#">
                                     <i class="am-icon-image"></i>
                                 </a>
                             </div>
                             <div class="am-btn-group">
+                                <input type="file" class="input-cover file">
                                 <a class="am-btn am-btn-primary" href="#">
                                     <i class="am-icon-file"></i>
                                 </a>
@@ -121,6 +124,8 @@
         uId:""
     }
 
+    var socketHandle;
+
     jQuery(document).ready(function () {
             $("#login-model").modal();
 
@@ -131,7 +136,7 @@
         this.msgHandel = null;
     }
 
-    var MessageHandel = function(){}
+    var MessageHandle = function(){}
 
     SocketHandle.prototype = {
         init : function(){
@@ -139,8 +144,8 @@
             //建立到服务器的socket连接
             this.socket = io.connect();
             //监听socket的connect事件，此事件表示连接已经建立
-            this.msgHandel = new MessageHandel();
-            this.msgHandel.init(that);
+            this.msgHandle = new MessageHandle();
+            this.msgHandle.init(that);
 
             //连接提示
             this.socket.on('connect', function(data) {
@@ -148,21 +153,21 @@
                 console.log("socket 连接成功");
             })
 
-            //接所有人消息
-            this.socket.on('aaa', function(data) {
-                //连接到服务器后，显示昵称输入框
-                console.log("socket 连接测试")
-                console.log(data);
-                if(data!=""){
-                    that.msgHandel.addToMsgBox(data,true);
-                }
-            })
+//            //接所有人消息
+//            this.socket.on('aaa', function(data) {
+//                //连接到服务器后，显示昵称输入框
+//                console.log("socket 连接测试")
+//                console.log(data);
+//                if(data!=""){
+//                    that.msgHandel.addToMsgBox(data,true);
+//                }
+//            })
 
             //接收单对单消息
             this.socket.on(userObj.uId,function(data){
                console.log("userObj.uId"+JSON.stringify(data));
                 if(data!=""){
-                    that.msgHandel.addToMsgBox(data.msg,true);
+                    that.msgHandle.addToMsgBox(data.msg,true);
                 }
             });
 
@@ -170,7 +175,7 @@
             this.socket.on('joinIn', function(data) {
                 //连接到服务器后，显示昵称输入框
                 console.log('joinIn',data)
-                that.msgHandel.addFriend(data);
+                that.msgHandle.addFriend(data);
             })
 
             //接收服务器错误信息
@@ -181,7 +186,7 @@
 
             //用户离线
             this.socket.on('userDisconnected',function(data){
-                that.msgHandel.deleteUser(data);
+                that.msgHandle.deleteUser(data);
             })
         },
         getSocketId:function(){
@@ -205,12 +210,16 @@
         }
     }
 
-    MessageHandel.prototype = {
+    MessageHandle.prototype = {
         init : function(socket){
             var that = this;
             $("#sendBtn").on('click',function(){
+                if(receiveUserObj.uId == ""){
+                    alert("请选择聊天对象!");
+                    return;
+                }
                 var content = $(this).parent().prev().val();
-                $("#chatText").parent().prev().val("");
+                $("#chatText").val("");
                 if(content != ""){
                     that.addToMsgBox(content,false);
                     socket.sendMsg(content);
@@ -222,6 +231,10 @@
                 document.onkeydown=function(event){
                     var e = event ? event :(window.event ? window.event : null);
                     if(e.keyCode==13){
+                        if(receiveUserObj.uId == ""){
+                            alert("请选择聊天对象!");
+                            return;
+                        }
                         var content = $("#chatText").val();
                         $("#chatText").val("");
                         if(content != ""){
@@ -262,6 +275,50 @@
         deleteUser : function(data){
             console.log(data)
             $("#"+data.userInfo.uId).remove();
+            if(receiveUserObj.uId == data.userInfo.uId){
+                receiveUserObj.uId = "";
+                receiveUserObj.nick = "";
+            }
+            $("#myNicName").text("昵称");
+        }
+    }
+
+    var FileHandle = function(){}
+
+
+    FileHandle.prototype = {
+        init : function(){
+            var msgHandle = new MessageHandle();
+            var that = this;
+            var imgEle = document.querySelector(".image");
+            imgEle.onchange = function(e){
+                if(receiveUserObj.uId == ""){
+                    alert("请选择聊天对象!");
+                    return;
+                }
+                var files = e.target.files;
+                that.imageHandle(files[0],function(data){
+                    var img = "<img src="+data+" style='width: 100%;max-width: 510px;height: auto;'/>";
+                    msgHandle.addToMsgBox(img,false);
+                    socketHandle.sendMsgToPersonal(img);
+                });
+
+            }
+        },
+        imageHandle : function(imgFile,callback){
+            if(!typeof  FileReader){
+                alert("对不起,您的浏览器暂不支持发送图片,请更新到最新版浏览器!");
+                return;
+            }
+            if(imgFile.type.indexOf("image")===-1){
+                alert("该文件不是图片!");
+                return;
+            }
+            var reader = new FileReader();
+            reader.onload = function(e){
+                callback(e.target.result);
+            }
+            reader.readAsDataURL(imgFile);
         }
     }
 
@@ -272,16 +329,18 @@
             if(data.reusltCode != 1){
                 alert(data.message);
             }else{
-
-                userObj.nick = "uId"+$("input[name='username']").val();
-                userObj.uId = userObj.nick+new Date().getTime();
+                userObj.nick = $("input[name='username']").val();
+                userObj.uId = "uId"+userObj.nick+new Date().getTime();
                 $("#myId").text(userObj.nick);
                 console.log(userObj);
-                var socketHandle = new SocketHandle();
+                socketHandle = new SocketHandle();
                 socketHandle.init();
                 userObj.id = socketHandle.getSocketId();
                 socketHandle.login(userObj);
                 $('#login-model').modal();
+
+                var fileHandle = new FileHandle();
+                fileHandle.init();
             }
         })
     }
