--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,5 +1,11 @@
+body{
+  background-color: #efefef;
+  position: relative;
+}
+
 .am-container {
-  margin: 30px auto; }
+  margin: 30px auto;
+}
 
 .am-input-group-label {
   padding: 0;
@@ -16,28 +22,28 @@
 .friendList {
   list-style: none;
   padding-left: 0; }
-  .friendList li.active {
-    background-color: #efefef; }
-  .friendList li:hover, .friendList li:active {
-    background-color: #eee; }
-  .friendList li {
-    -webkit-transition: background-color 1s;
-    -moz-transition: background-color 1s;
-    -ms-transition: background-color 1s;
-    -o-transition: background-color 1s;
-    transition: background-color 1s;
-    border-bottom: 1px solid #eee;
-    width: 100%;
-    height: 60px;
-    line-height: 60px;
-    padding: 0 15px;
-    overflow: hidden;
-    text-overflow: ellipsis;
-    white-space: nowrap; }
-    .friendList li img {
-      vertical-align: middle;
-      width: 40px;
-      height: 40px; }
+.friendList li.active {
+  background-color: #efefef; }
+.friendList li:hover, .friendList li:active {
+  background-color: #eee; }
+.friendList li {
+  -webkit-transition: background-color 1s;
+  -moz-transition: background-color 1s;
+  -ms-transition: background-color 1s;
+  -o-transition: background-color 1s;
+  transition: background-color 1s;
+  border-bottom: 1px solid #eee;
+  width: 100%;
+  height: 60px;
+  line-height: 60px;
+  padding: 0 15px;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap; }
+.friendList li img {
+  vertical-align: middle;
+  width: 40px;
+  height: 40px; }
 
 .message-box {
   padding: 10px; }
@@ -46,24 +52,24 @@
   clear: both;
   padding: 10px;
   position: relative; }
-  .message img {
-    height: 40px;
-    width: 40px;
-    vertical-align: middle; }
-  .message .body {
-    width: auto;
-    right: 0;
-    padding: 5px 10px;
-    word-break: break-word;
-    background-color: #cae9f2;
-    display: inline-block;
-    position: relative;
-    max-width: 510px; }
-    .message .body .emjoy {
-      height: 25px;
-      width: 25px;
-      vertical-align: bottom;
-      float: none; }
+.message img {
+  height: 40px;
+  width: 40px;
+  vertical-align: middle; }
+.message .body {
+  width: auto;
+  right: 0;
+  padding: 5px 10px;
+  word-break: break-word;
+  background-color: #cae9f2;
+  display: inline-block;
+  position: relative;
+  max-width: 510px; }
+.message .body .emjoy {
+  height: 25px;
+  width: 25px;
+  vertical-align: bottom;
+  float: none; }
 
 .message.left .body {
   border-radius: 5px;
@@ -108,12 +114,12 @@
 .am-panel-bd.myUserInfo {
   height: 90px;
   padding: 10px; }
-  .am-panel-bd.myUserInfo img {
-    vertical-align: middle;
-    width: 40px;
-    height: 40px; }
-  .am-panel-bd.myUserInfo span {
-    color: red; }
+.am-panel-bd.myUserInfo img {
+  vertical-align: middle;
+  width: 40px;
+  height: 40px; }
+.am-panel-bd.myUserInfo span {
+  color: red; }
 
 .input-cover {
   position: absolute;
@@ -140,24 +146,52 @@
   position: absolute;
   top: 0;
   margin-top: -150px; }
-  .emjoyPanel ul {
-    border: none;
-    width: 100%;
-    height: 100%; }
-    .emjoyPanel ul li {
-      width: 100%;
-      height: 100%;
-      border-top: 1px solid #efefef;
-      box-sizing: border-box; }
-      .emjoyPanel ul li img {
-        display: inline-block !important;
-        width: 25px !important;
-        height: 25px;
-        float: left;
-        padding: 2px;
-        box-sizing: border-box;
-        border-right: 1px solid #efefef;
-        border-bottom: 1px solid #efefef;
-        cursor: pointer; }
-      .emjoyPanel ul li img.isLeft {
-        border-left: 1px solid #efefef; }
+.emjoyPanel ul {
+  border: none;
+  width: 100%;
+  height: 100%; }
+.emjoyPanel ul li {
+  width: 100%;
+  height: 100%;
+  border-top: 1px solid #efefef;
+  box-sizing: border-box; }
+.emjoyPanel ul li img {
+  display: inline-block !important;
+  width: 25px !important;
+  height: 25px;
+  float: left;
+  padding: 2px;
+  box-sizing: border-box;
+  border-right: 1px solid #efefef;
+  border-bottom: 1px solid #efefef;
+  cursor: pointer; }
+.emjoyPanel ul li img.isLeft {
+  border-left: 1px solid #efefef; }
+
+.w-h100px{
+  width: 100px;
+  height: 100px;
+}
+
+#userInfo [name="pictureFile"]{
+  position: absolute;
+  z-index: 2;
+  width: 100px;
+  height: 100px;
+  top:0;
+  left:0;
+  opacity: 0;
+  border-radius: 100%;
+}
+
+#userInfo [name="picture"]{
+  display: none;
+}
+
+#userInfoImg input{
+  position: absolute;
+  height: 100px;
+  width: 100px;
+  z-index: 99;
+  opacity: 0;
+}
